# propel

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: code-reviewer.md  data-flow-tracer.md  env-researcher.md  failure-mode-researcher.md  jax-logic-auditor.md  paper-alignment-auditor.md  regression-guard.md  silent-bug-detector.md
cli/: pyproject.toml
cli/src/propel_cli/: __init__.py  cli.py
commands/: debug-training.md  intro.md  new-session.md  primer.md  propel.md  read-paper.md  switch.md  trace-shapes.md
commands/propel/: debug-training.md  intro.md  new-session.md  trace-shapes.md
core/: CORE.md
docs/: README.md  customization.md  pitfall.md  quickstart.md  workflow.md
hooks/: hooks.json  session-start.sh  working-memory.sh
skills/c-codex/: SKILL.md
skills/c-review/: SKILL.md
skills/codex-lead/: SKILL.md
skills/context-hygiene/: SKILL.md
skills/deep-research/: SKILL.md
skills/frontend-design/: SKILL.md
skills/investigation/: SKILL.md
skills/monitor/: SKILL.md
skills/paper-extraction/: SKILL.md
skills/project-customization/: SKILL.md
skills/research-design/: SKILL.md
skills/research-validation/: SKILL.md
skills/retrospective/: SKILL.md
skills/subagent-driven-research/: SKILL.md  auditor-dispatch.md  implementer-prompt.md  spec-reviewer-prompt.md
skills/systematic-debugging/: SKILL.md
skills/think-deeply/: SKILL.md
skills/trainer-mode/: SKILL.md
skills/using-git-worktrees/: SKILL.md
templates/: CLAUDE.md
tests/: test_hook_output.sh  test_skill_triggers.md
(+5 files in other folders)
